# RGraphicsDevice

./: .Rbuildignore  Changes.xml  DESCRIPTION  FAQ.xml  GNUmakefile  NAMESPACE  Notes  TUTodo.xml  Todo.xml  config.status  configure  configure.in  devDesc.sub  heat.R
R/: GContext.R  GEDevDesc.R  RDevDesc.R  classes.R  devDescMethods.R  gd.R  lend.R  ljoin.R  rgb.R  zClasses.R
TU/: GNUmakefile  gd.c  gd.c.t00.tu  notes  tu.R
Web/: config.status  index.html  index.html.in
ctest/: colors.c
inst/doc/: GNUmakefile  JSS.Rdb  JSS.html  classes.Rdb  implementation.html  implementation.xml  overview.html  overview.xml
inst/examples/IdentifyElements/: #device.R#  GNUmakefile  device.R  heatmap.Rdb  heatmap.html  test.R
inst/examples/JavaScriptCanvas/: eg.html  eg.js  eg1.html  egText.html  hexbin.html  plot1_10.js  xyplot.html
inst/examples/PiecesDevice/: Todo.xml  checkFuns.R  makeHObjects.R  pieceDevice.R  strategy.Rdb  test.R  test.Rdb
inst/examples/SVG/: svgDev.R  svgEg.R
man/: DegenerateDeviceFunction-class.Rd  DevDesc-class.Rd  GEDevDescPtr-class.Rd  GE_ROUND_CAP.Rd  RDevDescMethods-class.Rd  RGB-class.Rd  R_GE_gcontext-class.Rd  deviceName.Rd  dummyDevice.Rd  graphicsDevice.Rd  isTransparent.Rd  makeGraphicsDeviceObject.Rd
src/: GEDevDesc.c  Makevars  Makevars.in  Makevars.win  RConverters.c  RDevDesc.c  RDevDescMethods.c  RGContext.c  RGraphicsDevice.h  RSetDevice.c  Rgd.c  createExpressions.c  createExpressions.h  proxy.c  proxyDecls.h
tests/: #q()#  gcontext.R  getFuncs.R  lattice.R  nullOps.R  sample.R
